--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 node {
-	distBaseUrl = 'https://direct.nodejs.org/dist/0'
+	distBaseUrl = 'https://direct.nodejs.org/dist/'
 	version = "9.11.1"
 	npmVersion = "5.6.0"
 }
