--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
-  //inlude the nodeJS plugin to execute nodejs and npm tasks
-  id "com.moowork.node" version "1.2.0"
+ // https://mvnrepository.com/artifact/com.moowork.gradle/gradle-node-plugin
+implementation group: 'com.moowork.gradle', name: 'gradle-node-plugin', version: '1.2.0'
+
 }
 
 node {
-	distBaseUrl = 'https://direct.nodejs.org/dist/'
+	
 	version = "9.11.1"
 	npmVersion = "5.6.0"
 }
