--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,22 @@
 plugins {
-
- // https://mvnrepository.com/artifact/com.moowork.gradle/gradle-node-plugin
-implementation group: 'com.moowork.gradle', version: '1.2.0'
-
+  //inlude the nodeJS plugin to execute nodejs and npm tasks
+  id "com.moowork.node" version "1.2.0"
 }
+
+buildscript {
+    repositories {
+        maven {
+            url = uri("https://plugins.gradle.org/m2/")
+        }
+    }
+    dependencies {
+        classpath "com.moowork.gradle:gradle-node-plugin:1.2.0"
+    }
+}
+
+apply plugin: "com.moowork.node"
+
+
 
 node {
 	
