--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,10 @@
-buildscript {
-    repositories {
-        maven {
-            url = uri("https://plugins.gradle.org/m2/")
-        }
-    }
-    dependencies {
-        classpath "com.moowork.gradle:gradle-node-plugin:1.2.0"
-    }
-}
-
-apply plugin: "com.moowork.node"
-
 plugins {
   //inlude the nodeJS plugin to execute nodejs and npm tasks
   id "com.moowork.node" version "1.2.0"
 }
 
-
-
-
 node {
-
+	download = true
 	version = "9.11.1"
 	npmVersion = "5.6.0"
 }
