--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 
 node {
 	download = true
-	version = "16.20.0"
-npmVersion = "5.6.0"
+	version = "9.11.1"
+    npmVersion = "5.6.0"
 }
 
 
@@ -27,6 +27,23 @@ task zip(type: Zip) {
 	destinationDir(file("dist"))
 	baseName "trainSchedule"
 }
+
+// Declare npm tasks
+task npmInstall(type: NpmTask) {
+    dependsOn = []
+    args = ['install']
+}
+
+task npm_test(type: NpmTask) {
+    dependsOn = npmInstall
+    args = ['test']
+}
+
+task npm_build(type: NpmTask) {
+    dependsOn = npmInstall
+    args = ['build']
+}
+
 
 //declare task dependencies
 build.dependsOn zip
