--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,7 @@ node {
 	download = true
 	version = "9.11.1"
     npmVersion = "5.6.0"
-}
-
-
-
-//declare a build task
+} //declare a build task
 task build
 
 //declare a task to create a zip of the app
